--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       background: transparent;
-      overflow: hidden;
       font-family: sans-serif;
+      height: 100%;
+      overflow: hidden;
     }
 
     #wrapper {
       display: flex;
       align-items: center;
-      height: 20px; /* Tightest container height */
+      justify-content: start;
+      height: 100%;
       overflow: hidden;
     }
 
@@ -24,7 +25,7 @@
       display: inline-block;
       white-space: nowrap;
       padding-left: 100%;
-      font-size: 14px; /* Slightly reduced for tighter spacing */
+      font-size: 22px; /* Increased to match Notion's forced height */
       color: #3998DC;
       animation: ticker 20s linear infinite;
     }
