--- a/index.html
+++ b/index.html
@@ -28,19 +28,13 @@
     .ticker {
       display: inline-block;
       padding-left: 100%;
+      padding-right: 100%;
       font-size: 22px;
       color: #3998DC;
-      animation: ticker 20s linear infinite;
-      pointer-events: auto;
-    }
-
-    @keyframes ticker {
-      0%   { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
     }
 
     ::-webkit-scrollbar {
-      display: none; /* Hide scrollbar for cleaner look */
+      display: none;
     }
   </style>
 </head>
@@ -54,9 +48,38 @@
   <script>
     const params = new URLSearchParams(window.location.search);
     const text = params.get('text');
+    const ticker = document.getElementById('tickerText');
+    const wrapper = document.getElementById('wrapper');
+
     if (text) {
-      document.getElementById('tickerText').textContent = decodeURIComponent(text);
+      ticker.textContent = decodeURIComponent(text);
     }
+
+    let scrollSpeed = 0.5; // pixels per frame
+    let isUserScrolling = false;
+    let userScrollTimeout;
+
+    function autoScroll() {
+      if (!isUserScrolling) {
+        wrapper.scrollLeft += scrollSpeed;
+        if (wrapper.scrollLeft >= ticker.scrollWidth - wrapper.clientWidth) {
+          wrapper.scrollLeft = 0; // loop back to start
+        }
+      }
+      requestAnimationFrame(autoScroll);
+    }
+
+    // Detect manual scroll
+    wrapper.addEventListener('scroll', () => {
+      isUserScrolling = true;
+      clearTimeout(userScrollTimeout);
+      userScrollTimeout = setTimeout(() => {
+        isUserScrolling = false;
+      }, 1000); // resume auto-scroll after 1s of inactivity
+    });
+
+    // Start scrolling
+    requestAnimationFrame(autoScroll);
   </script>
 </body>
 </html>
